fixing padding of the time pickers buttons on mobile version

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ video{
     min-height: 100%;/*Enlever ca*/
     z-index: -1;
     background-color: rgb(4, 4, 34);
+    
 }
 .time-select button,
 .sound-picker button{
@@ -112,6 +113,10 @@ video{
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
+    }
+    .time-select button{
+        padding: 20px 0;
+        line-height: 5px;
     }
     .player-container img{
         height: 30%;
